add create artigo with autor transactional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=artigo-blog
 
-spring.data.mongodb.uri=mongodb://localhost/blog
+spring.data.mongodb.uri=mongodb://localhost/blog?retryWrites=false
 spring.data.mongodb.port=
 spring.data.mongodb.username=
 spring.data.mongodb.password=
